Endpoint to list packages for a maintainer
