# app/controllers/api/v1/maintainers_controller.rb
@@ -21,4 +21,10 @@ class Api::V1::MaintainersController < Api::V1::ApplicationController
     @registry = Registry.find_by_name!(params[:registry_id])
     @maintainer = @registry.maintainers.find_by_login(params[:id]) || @registry.maintainers.find_by_uuid!(params[:id])
   end
+
+  def packages
+    @registry = Registry.find_by_name!(params[:registry_id])
+    @maintainer = @registry.maintainers.find_by_login(params[:id]) || @registry.maintainers.find_by_uuid!(params[:id])
+    @pagy, @packages = pagy(@maintainer.packages.includes(:maintainers).order('latest_release_published_at DESC'))
+  end
 end
